fix: keep changelog top spacing stable

--- a/style.css
+++ b/style.css
@@ -43,11 +43,11 @@
   margin-top: 0 !important;
 }
 
-#content[data-page-href$="/changelog"] .update-container:first-child {
+#content[data-page-href$="/changelog"] > .update-container:first-of-type {
   padding-top: 0 !important;
 }
 
-#content[data-page-href$="/changelog"] .update-container:first-child [data-component-part="update-content"] > h1:first-child {
+#content[data-page-href$="/changelog"] .update-container [data-component-part="update-content"] > h1:first-child {
   margin-top: 0 !important;
 }
 
